# rpi_pico_bool_book

./: README.md
src_c/examples/AdcMcp3008Test/: AdcMcp3008Test.cpp  CMakeLists.txt  mcp3008.cpp  mcp3008.h
src_c/examples/adc_console/: CMakeLists.txt
src_c/examples/adc_test/: CMakeLists.txt  adc_test.c  corrected.txt  eval.ipynb  meas0.txt  meas1.txt  meas2.txt  meas3.txt
src_c/examples/bool_book/: CMakeLists.txt  bool_book.c  config.h
src_c/examples/button/: CMakeLists.txt
src_c/examples/hello_world/: CMakeLists.txt  hello_world.c
src_c/examples/neopixel/: CMakeLists.txt  neopixel.cpp
src_c/karls_buch/: CMakeLists.txt  abstractModeIdentifier.cpp  abstractModeIdentifier.h  adcModeIdentifier.cpp  adcModeIdentifier.h  classes.puml  colorConverter.cpp  config.h  easterEggStates.h  karls_buch.cpp  mcp3008.cpp  mcp3008.h  modes.h
src_c/karls_buch/Documentation/: easterEgg.md  easterEggFsm.puml
src_py/: color_converter.py  config.json  main.py
src_py/exp/: config.json  decorator_test.py  json_test.py  neopixel.py  spi.py  test.py  testlib.py
